hard-gists/3d7e2b077ba5af48ab1ba96678733e6f/run.log
=== Docker Run Log for 3d7e2b077ba5af48ab1ba96678733e6f ===
Started at: Mi 29. Okt 14:12:41 CET 2025

[2025-10-29 14:12:42] START: Running container for 3d7e2b077ba5af48ab1ba96678733e6f
[2025-10-29 14:12:42] SUCCESS: Container 75f10d6567f43752a85e119d79d8e0f610b5498729e3b182c7e9c8d593bff365 started for 3d7e2b077ba5af48ab1ba96678733e6f
=== Container logs for 3d7e2b077ba5af48ab1ba96678733e6f ===
  File "/snippet.py", line 15
    print "Msg: " + s.recv(1024)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3d7e2b077ba5af48ab1ba96678733e6f ===
[2025-10-29 14:12:44] INFO: Container 75f10d6567f43752a85e119d79d8e0f610b5498729e3b182c7e9c8d593bff365 has stopped
